# Charts-based-on-ABS-data

./: .gitignore  311.yaml  312.yaml  313-uv-requirements.txt  313.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml  test-mgplot.sh  test-readabs.sh  test-sdmxabs.sh  uv-upgrade.sh  yahoo-commodities-update.sh
notebooks/: $ - In URGENT need of repair  ABS !Economy.ipynb  ABS Bi-annual Average Weekly Earnings 6302.ipynb  ABS Business Entries and Exits 8165.ipynb  ABS Census - Ad Hoc.ipynb  ABS Earnings by Education 6337.ipynb  ABS Inflation model.ipynb  ABS Inflation multi-measure.ipynb  ABS LFS - Household dynamics.ipynb  ABS Monthly - NEW CPI Series.ipynb  ABS Monthly Arrivals Departures 3401.ipynb  ABS Monthly Building Approvals 8731.ipynb  ABS Monthly Business Turnover Indicator.ipynb  ABS Monthly Consumer Price Index Indicator 6484.ipynb  ABS Monthly Detailed Labour Force 6291.ipynb  ABS Monthly Household Spending Indicator 5682.ipynb  ABS Monthly International Trade 5368.ipynb  ABS Monthly International Trade in Goods 5368.ipynb  ABS Monthly Labour Force 6202.ipynb  ABS Monthly Lending 5601.ipynb  ABS Monthly Retail Trade 8501.ipynb  ABS Monthly Retail Turnover 8501.ipynb  ABS Monthly+Quarterly Detailed Labour Force 6291.ipynb  ABS Monthly+Quarterly Household Spending.ipynb  ABS Monthly+Quarterly Retail Trade 8501.ipynb  ABS Personal Income by Remoteness 6524.ipynb  ABS Population Growth Measures.ipynb  ABS Population.ipynb  ABS Productivity Growth.ipynb  ABS Quarterley National Accounts 5206.ipynb  ABS Quarterly Building Activity 8752.ipynb  ABS Quarterly Business Indicators 5676.ipynb  ABS Quarterly Capital Expenditure 5625.ipynb  ABS Quarterly Consumer Price Index 6401.ipynb  ABS Quarterly Dwelling Stock 6432.ipynb  ABS Quarterly Estimated Resident Population 3101.ipynb  ABS Quarterly Financial Accounts 5232.ipynb  ABS Quarterly Industrial Disputes 6321.ipynb  ABS Quarterly International Trade 5302.ipynb  ABS Quarterly Job Vacancies 6354.ipynb  (+93 more)
notebooks/ASX-COMBINED/: ASX-COMBINED.csv
notebooks/CACHE/ABS_cpi_hierarchy/: cpi_hierarchy_cache.json
notebooks/NAIRU_INPUTS/: PIE_RBAQ.CSV  RBA_bonds.xls  gscpi_data.xls  interbank_overnight_rate_historical.parquet  nairu model  nairu model recent-fixed-NAIRU
notebooks/OLD/: ABS Inflation model.ipynb  ABS Monthly - NEW CPI Series.ipynb  ABS Monthly Arrivals Departures 3401.ipynb  ABS Monthly Business Turnover Indicator.ipynb  ABS Monthly+Quarterly Retail Trade 8501.ipynb  ABS Population Growth Measures.ipynb  ABS Quarterly Estimated Resident Population 3101.ipynb  ABS-SDMX-Inflation-multi_measure.ipynb
notebooks/notes/: census_dwelling_basis_note.md
previous-mm-setup/: 309.yaml  311.yaml
