[project]
name = "abs"
version = "0.0.0"
description = "Capture and plot data from the ABS and the RBA"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # - Jupyter notebooks
    "ipykernel",
    "watermark",

    # - system
    "typing",

    # - bespoke
    "readabs",
    "mgplot",

    # - data science
    "matplotlib",
    "numpy",
    "pandas",
    "openpyxl",
    "xlrd",
    "statsmodels",
    "seaborn",
    "babel",
    "pycountry",
    #"pmdarima",  # --- problematic

    # - internet
    "requests",
    "bs4",
    "lxml",
    "html5lib",
    "webdriver_manager",
    "selenium",

    # - Bayesian
    "pymc",
    "arviz",
    "jax",
    "numpyro",
    "graphviz",

    # - code
    "nbqa",
    "black",
    "pylint",
    "ruff",
    "mypy",

    # - typing
    "pandas-stubs",
    "numpy-typing",
    "types-selenium",
    "types-seaborn",
]
