[project]
name = "abs"
version = "0.0.0"
description = "Capture and plot data from the ABS and the RBA"
readme = "README.md"
requires-python = "==3.14.0"
dependencies = [
    # - Jupyter notebooks
    "ipykernel",
    "ipywidgets",
    "watermark",

    # - system
    "typing",

    # - bespoke
    "readabs",
    "mgplot",
    "sdmxabs",

    # - data science
    "matplotlib",
    "numpy",
    "pandas",
    "pyarrow",
    "openpyxl",
    "xlrd",
    "statsmodels",
    "seaborn",
    "babel",
    "pycountry",
    #"pmdarima",  # --- problematic

    # - internet
    "requests",
    "bs4",
    "lxml",
    "html5lib",
    "webdriver_manager",
    "selenium",

    # - Bayesian
    "pymc",
    "arviz",
    "jax",
    "numpyro",
    "graphviz",

    # - code
    "nbqa",
    "black",
    "pylint",
    "ruff",
    "mypy",

    # - typing
    "pandas-stubs",
    "numpy-typing",
    "types-selenium",
    "types-seaborn",
    "types-tabulate",
]

[tool.ruff]
line-length=115
lint.select = [ "ALL" ]  # Aggresively select all rules
lint.ignore = [
    # --- general rules to ignore
    "COM812",  # missing or trailing comma - recommended by ruff format
    "D203",    # Incorrect blank line before class - recommended by ruff check
    "D213",    # Multi-line docstring summary should start at the first line - recommended by ruff
    "EM101",   # Exception must not use a string literal
    "EM102",   # Exception must not use an f-string literal
    "T201",    # Remove `print` --> But I use print to alert the user
    "TRY003",  # Long exception messages.
    "PD008",   # mypy doesnt like .loc[] / ruff doesn't like .at[]

    # --- specifically for Jupyter notebooks.
    "B018",    # Found useless attribute access (often at cell end for output) 
    "BLE001",  # catch-all exceptions - not usefull in Jupyter notebooks
    "D100",    # Missing docstring in public module
    "E402",    # Module level import not at top of file - doesn't work with Notebooks
    "INP001",  # implicit-namespace-package - not relevant for Jupyter notebooks
    "PLR0913", # Too many arguments - not relevant for Jupyter notebooks
]

